--- a/src/build-html/templates/home-markup.pug
+++ b/src/build-html/templates/home-markup.pug
@@ -20,7 +20,7 @@ body
   // markup adapted from "john doe" - https://github.com/cadars/john-doe/blob/main/index.html
   header
     h1
-      a(href="#home") Site title
+      a(href="#home") Shweta's new Site!! 
     nav
       a(href="#about") About
       a(href="#blog") Blog
